Add Twitch logo and styling

--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,16 @@
     </head>
 	<body>
 		<h1>AB_twitch_status</h1>
-		Twitch.tv/abeckmann : <span id="twitch-stream-status"><span class="status">offline</span></span>
+		<div class="AB_twitch_status">
+			<svg version="1.1" class="twitch-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2400 2800">
+                <title>Twitch Logo</title>
+                <path d="M500,0L0,500v1800h600v500l500-500h400l900-900V0H500z M2200,1300l-400,400h-400l-350,350v-350H600V200h1600
+                    V1300z"></path>
+                <rect x="1700" y="550" class="st0" width="200" height="600"></rect>
+                <rect x="1150" y="550" class="st0" width="200" height="600"></rect>
+            </svg>
+			<span class="twitch-url">Twitch.tv/abeckmann:</span> <span id="twitch-stream-status" class="status">offline</span>
+		</div>
 		<script src="js/AB_twitch_status.js"></script>
 		<script>
 			//Example
