Update Twitch URL

--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
                 <rect x="1700" y="550" class="st0" width="200" height="600"></rect>
                 <rect x="1150" y="550" class="st0" width="200" height="600"></rect>
             </svg>
-			<span class="twitch-url">Twitch.tv/abeckmann:</span> <span id="twitch-stream-status" class="status">offline</span>
+			<span class="twitch-url">Twitch.tv/andybeckmann:</span> <span id="twitch-stream-status" class="status">offline</span>
 		</div>
 		<script src="js/AB_twitch_status.js"></script>
 		<script>
