--- a/demo.html
+++ b/demo.html
@@ -9,7 +9,7 @@
     </head>
 	<body>
 		<h1>AB_twitch_status</h1>
-		<div class="AB_twitch_status">
+		<div class="twitch_status_wrapper">
 			<svg version="1.1" class="twitch-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2400 2800">
                 <title>Twitch Logo</title>
                 <path d="M500,0L0,500v1800h600v500l500-500h400l900-900V0H500z M2200,1300l-400,400h-400l-350,350v-350H600V200h1600
